--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 <body>
     <main>
         <section>
+            <div id="mute">
+                <i class="ri-volume-mute-line"></i>
+            </div>
             <div class="all-reels">
                 
                 <div class="reel">
